dist/demo-client/Deployment.demo-client-deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-client
  name: demo-client-deployment
  namespace: galah-testbed
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app: demo-client
      cdk8s.io/metadata.addr: demo-client-deployment-c8c78e24
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-client
        cdk8s.io/metadata.addr: demo-client-deployment-c8c78e24
    spec:
      automountServiceAccountToken: false
      containers:
        - args: []
          command: []
          image: docker.io/maliciousbucket/chirp-client:master
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 7090
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
