dist/demo-client/Service.demo-client.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-client
  namespace: galah-testbed
spec:
  externalIPs: []
  ports:
    - name: http
      port: 7090
      protocol: TCP
      targetPort: 7090
  selector:
    app: demo-client
    cdk8s.io/metadata.addr: demo-client-deployment-c8c78e24
  type: ClusterIP
