dist/demo-client/IngressRoute.demo-client-ingressroute.k8s.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-client-ingressroute
  namespace: galah-testbed
spec:
  routes: []
